@@ -1,6 +1,6 @@
 ################################################################################
 #    Creme is a free/open-source Customer Relationship Management software
-#    Copyright (C) 2009-2023  Hybird
+#    Copyright (C) 2009-2024  Hybird
 #
 #    This program is free software: you can redistribute it and/or modify
 #    it under the terms of the GNU Affero General Public License as published by
@@ -237,7 +237,7 @@ class CredentialsFilterStep(CremeModelForm):
                 'user': self.user,
                 'required': False,
                 'efilter_registry': efilter_registry,
-                'efilter_type': efilter_type,
+                # 'efilter_type': efilter_type,
             }
             handler_fieldname = self._handler_fieldname
             for handler_cls in handler_classes:
